<?xml version="1.0"?>
<package format="3">
  <name>omnimapper</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shengye@ucsd.edu">shengye</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>gtsam</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>tbb</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
